--- a/src/app/planning/styles/index.scss
+++ b/src/app/planning/styles/index.scss
@@ -74,7 +74,6 @@
 }
 
 .calendar-grid {
-    background: #e0e0e0;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
     overflow: hidden;
@@ -87,21 +86,31 @@
     grid-template-columns: repeat(7, 1fr);
     gap: 1px;
     height:100%;
+    position:relative;
     .calendar-day {
         min-width: 1fr;
     }
 }
 
+.time-slot-overlay {
+    width: 100%;
+    height:1px;
+    background-color:rgb(229, 229, 229);
+    position:absolute;
+    left:0;
+}
+
 
 
 .calendar-day {
-    background: #ffffff;
     min-height: 120px;
     padding: 8px;
     display: flex;
     flex-direction: column;
     transition: background-color 0.2s ease;
     position: relative;
+
+
 }
 
 .weekdays-container {
@@ -146,23 +155,23 @@
 
 
 .calendar-day:hover {
-    background: #f9fafb;
+    background: rgba(249, 250, 251,0.75);
 }
 
 .calendar-day.other-month {
-    background: #fafafa;
+    background: rgba(250, 250, 250,0.75);
 }
 
 .calendar-day.other-month .day-number {
-    color: #9ca3af;
+    color: rgba(107, 114, 128, 0.5);
 }
 
 .calendar-day.today {
-    background: #eff6ff;
+    background: rgba(239, 246, 255,0.75);
 }
 
 .calendar-day.today .day-number {
-    background: #3b82f6;
+    background: rgba(59, 130, 246, 0.7);
     color: white;
     border-radius: 50%;
     width: 28px;
@@ -181,6 +190,9 @@
     align-self: flex-start;
     margin: 0 auto;
 }
+
+
+
 
 .events-container {
     display: flex;
@@ -202,7 +214,12 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    max-width: calc(100% - 16px );
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.calendar-day.other-weekly {
+        max-width: calc(100% - 16px );
 }
 
 .event-tile:hover {
