--- a/src/app/finances/cachets/page.module.css
+++ b/src/app/finances/cachets/page.module.css
@@ -25,8 +25,8 @@
 }
 
 .container form {
-  color: "red"; 
-  margin-bottom : 8px;
+  color: #b71c1c;
+  margin-bottom: 8px;
 }
 
 .container form button {
