--- a/src/app/administration/cachets/page.module.css
+++ b/src/app/administration/cachets/page.module.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   padding: 24px;
   font-family: Arial, sans-serif;
-  color: #000;
+  color: #fff;
 }
 
 .container h1 {
@@ -25,7 +25,7 @@
 }
 
 .container form {
-  color: #000;
+  color: #fff;
   margin-bottom: 8px;
 }
 
