--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
   --color-icon: #475569;
 
   /* Backgrounds */
-  --color-background: #fffff
+  --color-background: #fffff;
   --color-foreground: #171717;
 
   /* Cream scale (re-adding from config) */
