--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
   --color-bg-hover: #f8fafc;
   --color-bg-disabled: #f1f5f9;
   --color-icon: #475569;
-
+  --color-background: #ffffff;
   /* Backgrounds */
   --color-background: #fffff;
   --color-foreground: #171717;
